@@ -48,6 +48,7 @@ public:
 
 	QDate startDate() const;
 	QDate endDate() const;
+	int minimumValue(const QDate& day, ValueType type) const;
 	int value(const QDate& day, ValueType type) const;
 	int dailyGoal() const;
 	int finalGoal() const;
@@ -64,7 +65,9 @@ private:
 private:
 	QString m_novel;
 	QList<int> m_values;
+	QList<int> m_minimum_values;
 	QList<int> m_daily_values;
+	QList<int> m_daily_minimum_values;
 	int m_daily_goal;
 	int m_final_goal;
 	QDate m_start_date;
